--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
       <script src="note.js"></script>
+      <script src="assert.js"></script>
       <script src="note-test.js"></script>
 
   </head>
