added note list module

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-      <script src="note.js"></script>
-      <script src="assert.js"></script>
-      <script src="note-test.js"></script>
+      <script src="src/note.js"></script>
+      <script src="src/note-list.js"></script>
+      <script src="src/assert.js"></script>
+
+      <script src="test/note-test.js"></script>
+      <script src="test/note-list-test.js"></script>
 
   </head>
   <body>
