added note list view and test passed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title></title>
       <script src="src/note.js"></script>
       <script src="src/note-list.js"></script>
+      <script src="src/note-list-view.js"></script>
       <script src="src/assert.js"></script>
 
       <script src="test/note-test.js"></script>
       <script src="test/note-list-test.js"></script>
+      <script src="test/note-list-view-test.js"></script>
 
   </head>
   <body>
