--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
       <script src="src/note-list.js"></script>
       <script src="src/note-list-view.js"></script>
       <script src="src/assert.js"></script>
+      <script src="note-controller.js"></script>
 
       <script src="test/note-test.js"></script>
       <script src="test/note-list-test.js"></script>
       <script src="test/note-list-view-test.js"></script>
 
   </head>
-  <body>
+  <body onload="window.alert('Welcome to my home page!');">
+    <div id="app">hello</div>
   </body>
 </html>
