step5 completed, insert html into page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <script src="test/note-list-view-test.js"></script>
 
   </head>
-  <body onload="window.alert('Welcome to my home page!');">
+  <body>
     <div id="app">hello</div>
   </body>
 </html>
