--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <script src="src/note-list-view.js"></script>
       <script src="src/assert.js"></script>
       <script src="note-controller.js"></script>
+      <script src="src/describe.js"></script>
+      <script src="src/single-note-view.js"></script>
 
       <script src="test/note-test.js"></script>
       <script src="test/note-list-test.js"></script>
@@ -16,5 +18,14 @@
   </head>
   <body>
     <div id="app">hello</div>
+    <a href= ""><script>
+      var note = new Note("Favourite drink: seltzer");
+      var emptyNoteList = new NoteList();
+      var updatedNoteList = emptyNoteList.addNote(note);
+      var noteListView = new NoteListView(updatedNoteList.list);
+      var html = noteListView.viewNoteList();
+      changeText(html)
+
+    </script></a>
   </body>
 </html>
