--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
       var noteController = new NoteController(emptyNoteList);
       noteController.getHtmlAndInsertIntoApp()
 
-      makeUrlChangeShowAnimalForCurrentPage();
+      makeUrlChangeShowNoteForCurrentPage();
 
-      function makeUrlChangeShowAnimalForCurrentPage() {
-        window.addEventListener("hashchange", showAnimalForCurrentPage);
+      function makeUrlChangeShowNoteForCurrentPage() {
+        window.addEventListener("hashchange", showNoteForCurrentPage);
       };
 
-      function showAnimalForCurrentPage() {
+      function showNoteForCurrentPage() {
         console.log("helo");
-        showAnimal(getAnimalFromUrl(window.location));
+        showNote(getNoteFromUrl(window.location));
       };
 
-      function getAnimalFromUrl(location) {
+      function getNoteFromUrl(location) {
         return location.hash.split("#")[1];
       };
 
-      function showAnimal(animal) {
+      function showNote(note) {
         document
-          .getElementById("message" + animal)
+          .getElementById("message" + note)
           .classList.remove("hidden");
       };
 
